20190118: div. Anpassungen, damit auf dem IPhone die Bildschirminhalte nicht über 100% gross werden -> dies führt zu komischen Vergrösserungseffekten bei Eingaben, z.B. Datum und Uhrzeit oder auch bei Select's 20190114: Commit 20190104: wie 20190103, aber neu werden Breakpointänderungen live aktualisiert (erstmal bei Komp. "termin-liste")           -> neu: globale Variablen via Angular dependency injection (Singleton in AppModule)           -> Breakpoints werden in AppModule über den Window-Resizeevent aktualisiert 20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.css
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.css
@@ -1,16 +1,23 @@
+/*
 .code_aktivitaeten-edit {
-  width: 100%; }
+  width: 100%;
   @media (max-width: 767px) {
-    .code_aktivitaeten-edit {
-      width: 100%; } }
-  .code_aktivitaeten-edit textarea {
-    min-height: 100px; }
-  .code_aktivitaeten-edit select {
-    max-width: 200px; }
-  .code_aktivitaeten-edit .commands {
-    margin-top: 20px; }
+    width: 100%;
+  }
+  textarea {
+    min-height: 100px;
+  }
+  select {
+    max-width: 200px;
+  }
+  .commands {
+    margin-top: 20px;
+  }
+}
 
-.input-group-text {
-  margin-left: 7px; }
+.input-group-text{
+  margin-left: 7px;
+}
+*/
 
 /*# sourceMappingURL=code_aktivitaeten-edit.component.css.map */
