--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
@@ -1,4 +1,4 @@
-<div class="code_aktivitaeten-edit edit_form">
+<div class="code_aktivitaeten-edit  container-fluid">
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <h2>{{title}}</h2>
     <div class="form-group row">
