--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.css
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.css
@@ -1,4 +1,35 @@
 @charset "UTF-8";
+input[type="color"],
+input[type="select"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+select,
+textarea {
+  font-size: 1rem; }
+
+/*
+.input-group-prepend {
+  width : 35%; !*adjust as needed*!
+}
+
+.input-group-prepend label {
+  width: 100%;
+  overflow: hidden;
+}*/
+.input-group-text {
+  min-width: 12ch; }
+
 .lbl-pad-right {
   padding-right: 5px; }
 
@@ -57,11 +88,6 @@
     #section-wiederholungen table td, #section-wiederholungen table th {
       text-align: center; }
 
-/*  margin-bottom: 5px;
-  margin-left: 5px;
-  padding-bottom: 5px;
-  padding-left: 12px;
-}*/
 .mytoptoolbar {
   display: block;
   border-width: 5px;
