--- a/Template_Angular7/ClientApp/src/app/app.component.css
+++ b/Template_Angular7/ClientApp/src/app/app.component.css
@@ -4,6 +4,18 @@
     padding-top: 50px;
   }
 }*/
+/*@media (max-width: 500px) {
+  //! *On small screens, the nav menu spans the full width of the screen . Leave a space for it . *!
+  .body-content {
+    padding-top: 150px;
+  }
+  label,
+  select,
+  textarea,
+  input {
+    font-size: 26px;
+  }
+}*/
 .container-fluid {
   padding-right: 10px;
   padding-left: 10px; }
