--- a/Template_Angular7/ClientApp/src/app/app.component.scss
+++ b/Template_Angular7/ClientApp/src/app/app.component.scss
@@ -5,6 +5,21 @@
   }
 }*/
 
+/*@media (max-width: 500px) {
+  //! *On small screens, the nav menu spans the full width of the screen . Leave a space for it . *!
+  .body-content {
+    padding-top: 150px;
+  }
+  label,
+  select,
+  textarea,
+  input {
+    font-size: 26px;
+  }
+}*/
+
+
+
 .container-fluid {
   padding-right: 10px;
   padding-left: 10px;
