--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.scss
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.scss
@@ -1,3 +1,4 @@
+/*
 .code_aktivitaeten-edit {
   width: 100%;
   @media (max-width: 767px) {
@@ -17,6 +18,7 @@
 .input-group-text{
   margin-left: 7px;
 }
+*/
 
 
 
