--- a/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-edit.component.html
@@ -1,29 +1,58 @@
-<div class="teilnehmer-edit edit_form">
-  <h2>{{title}}</h2>
-  <form [formGroup]="form" (ngSubmit)="onSubmit()">
+<div class="teilnehmer-edit container-fluid">
+  <h3>{{title}}</h3>
+
+  <!--<form>
+    <div class="form-group row">
+      <label for="name1" class="col-sm-2 col-form-label">Name</label>
+      <div class="col-sm-2">
+        <input type="text" class="form-control" id="name1" placeholder=".col-sm-10">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="name2" class="col-sm-2 col-form-label">Other Name</label>
+      <div class="col-sm-2">
+        <input type="text" class="form-control" id="name2" placeholder=".col-sm-10">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="name3" class="col-sm-2 col-form-label">Third Name</label>
+      <div class="col-sm-2">
+        <input type="text" class="form-control" id="name3" placeholder=".col-sm-10">
+      </div>
+    </div>
+    &lt;!&ndash;<div class="form-group row">
+      <div class="offset-sm-2 col-sm-10">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </div>&ndash;&gt;
+  </form>-->
+
+  <form (ngSubmit)="onSubmit()" [formGroup]="form">
     <div class="form-group row">
       <label for="vorname" class="col-sm-2 col-form-label">Vorname:</label>
-      <div class="col-sm-3">
-        <input type="text" id="vorname"
-               formControlName="Vorname" required
-               placeholder="Vorname eingeben..."
-               class="form-control" />
+      <div class="col-sm-2">
+        <input class="form-control" formControlName="Vorname" id="vorname"
+               placeholder="Vorname eingeben..." required
+               type="text"
+        />
       </div>
     </div>
     <div class="form-group row">
       <label for="nachname" class="col-sm-2 col-form-label">Nachname:</label>
-      <div class="col-sm-3">
-        <input type="text" id="nachname"
-               formControlName="Nachname" required
-               placeholder="Nachname eingeben..."
-               class="form-control" />
+      <div class="col-sm-2">
+        <input class="form-control" formControlName="Nachname" id="nachname"
+               placeholder="Nachname eingeben..." required
+               type="text"
+        />
       </div>
     </div>
+
+
     <div class="form-group commands">
       <!--<button *ngIf="editMode" type="submit"-->
-      <button type="submit"
-              [disabled]="form.invalid"
-              class="btn btn-sm btn-success">
+      <button [disabled]="form.invalid"
+              class="btn btn-sm btn-success"
+              type="submit">
         <i class="fas fa-save"></i>
         Speichern
       </button>
@@ -34,9 +63,9 @@
         Speichern
       </button>-->
       <!--<button *ngIf="!editMode" type="submit"-->
-      <button type="submit"
-              (click)="onBack()"
-              class="btn btn-sm btn-secondary">
+      <button (click)="onBack()"
+              class="btn btn-sm btn-secondary"
+              type="submit">
         <i class="fas fa-arrow-alt-circle-left"></i>
         Zurück
       </button>
