--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.scss
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.scss
@@ -1,5 +1,42 @@
 $color-label: rgba(70, 89, 240, 0.99);
 
+input[type="color"],
+input[type="select"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+//select:focus,
+select,
+textarea {
+  font-size: 1rem;
+}
+
+/*
+.input-group-prepend {
+  width : 35%; !*adjust as needed*!
+}
+
+.input-group-prepend label {
+  width: 100%;
+  overflow: hidden;
+}*/
+
+.input-group-text {
+  min-width: 12ch; // 12 Zeichen lang, so werden die Textfelder alle gleich lang
+}
+
+
+
 .lbl-pad-right {
   padding-right: 5px;
 }
@@ -81,12 +118,6 @@ $color-label: rgba(70, 89, 240, 0.99);
     }
   }
 }
-
-/*  margin-bottom: 5px;
-  margin-left: 5px;
-  padding-bottom: 5px;
-  padding-left: 12px;
-}*/
 
 .mytoptoolbar {
   display: block;
