20190123: Test Produktiv, d.h. ng --prod es sind noch einige Fehlermeldungen zu elimieren 20190118: div. Anpassungen, damit auf dem IPhone die Bildschirminhalte nicht über 100% gross werden -> dies führt zu komischen Vergrösserungseffekten bei Eingaben, z.B. Datum und Uhrzeit oder auch bei Select's 20190114: Commit 20190104: wie 20190103, aber neu werden Breakpointänderungen live aktualisiert (erstmal bei Komp. "termin-liste")           -> neu: globale Variablen via Angular dependency injection (Singleton in AppModule)           -> Breakpoints werden in AppModule über den Window-Resizeevent aktualisiert 20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
@@ -23,7 +23,8 @@
       <label for="aktcolor" class="col-sm-2 col-form-label">Farbe:</label>
       <div class="col-sm-3">
         <input type="color" id="aktcolor" formControlName="Farbe"
-               class="form-control" [value]="Farbe" />
+               class="form-control" />
+
       </div>
     </div>
     <div class="input-group row">
@@ -40,7 +41,7 @@
       <div class="input-group-prepend col-sm-3">
         <div class="input-group-text">
           <input class="formcontrol" id="zeitUnbestimmt" type="checkbox" formControlName="ZeitUnbestimmt"
-                 [value]="ZeitUnbestimmt" (change)="onChangeZeitUnbestimmt($event)">
+                 (change)="onChangeZeitUnbestimmt($event)">
         </div>
       </div>
     </div>
