--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
@@ -58,7 +58,7 @@
         Zurück
       </button>
       <button type="submit"
-              (click)="onShowPlaner(gruppe)"
+              (click)="onShowPlaner()"
               class="btn btn-sm btn-primary">
         <i class="fas fa-calendar-alt"></i>
         Zeige Planer
