--- a/Template_Angular7/ClientApp/src/app/components/kalender/kalender.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/kalender/kalender.component.html
@@ -28,7 +28,7 @@
 
   <div class="col-md-4">
     <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):locale  }}</h3>
-    <button *ngIf="!showAllData" (click)="onCreateTermin()" class="btn btn-sm btn-primary">
+    <button (click)="onCreateTermin()" class="btn btn-sm btn-primary">
       <i class="fa fa-plus-circle"></i>
       Neuen Termin erstellen
     </button>
