--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -2,7 +2,7 @@
 .main-nav {
   height: 50px;
   display: block;
-  margin-bottom: 10px; }
+  margin-bottom: 15px; }
 
 .navbar-image {
   position: relative;
@@ -32,16 +32,15 @@
   bottom: 0;
   width: 100%;
   z-index: 9;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 0px;
-  background-color: #3387fd; }
+  background-color: rgba(51, 135, 253, 0.95);
+  box-shadow: 0 0.35rem 0.75rem rgba(51, 135, 253, 0.35); }
 
 /* Auflösung > 576px */
 @media (min-width: 576px) {
   .main-nav {
     height: 50px;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     display: block; }
 
   .navbar-image {
@@ -52,9 +51,7 @@
     bottom: 0;
     width: 100%;
     z-index: 9;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 0px;
-    background-color: #3387fd; }
+    box-shadow: 0 0.35rem 0.75rem rgba(51, 135, 253, 0.35); }
     .navbar ul {
       float: none; } }
 
