--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="nav.visible" class="main-nav">
   <!--<nav class="navbar navbar-expand-md navbar-light bg-light mb-4">-->
   <!--<nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">-->
-  <nav class="navbar navbar-default navbar-expand-md navbar-light">
+  <nav class="navbar navbar-default navbar-expand-md navbar-light box-shadow">
     <a class="navbar-image" [routerLink]="['/home']">
       <img src="/dist/logo.png" alt="Gruppenplaner"/>
     </a>
