--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.scss
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.scss
@@ -1,7 +1,7 @@
 .main-nav {
   height: 50px;
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .navbar-image {
@@ -37,11 +37,8 @@
   bottom: 0;
   width: 100%;
   z-index: 9;
-
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 0px;
-
-  background-color: rgb(51, 135, 253);
+  background-color: rgba(51, 135, 253, 0.95);
+  box-shadow: 0 .35rem .75rem rgba(51, 135, 253, 0.35);
 }
 
 /* Auflösung > 576px */
@@ -50,7 +47,8 @@
   .main-nav {
     height: 50px;
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+
     display: block;
   }
 
@@ -58,19 +56,17 @@
     padding-right: 15px;
   }
 
+
   .navbar {
     overflow: hidden;
     bottom: 0;
     width: 100%;
     z-index: 9;
 
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 0px;
-
-    background-color: rgb(51, 135, 253);
-
     ul {
       float: none;
     }
+
+    box-shadow: 0 .35rem .75rem rgba(51, 135, 253, 0.35);
   }
 }
